# mig_accltr_agent

./: .gitignore  Dockerfile.sandbox  README.md  SETUP.md  enhancement.md  pyproject.toml  v10_task2_implementation_plan.md
adapters/: db2.json  generic.json  oracle.json  sqlserver.json  teradata.json
config/: .env.example  config.yaml
infrastructure/: README.md  docker-compose.yml
infrastructure/ddl/: create_target_schema.sql
infrastructure/hive-metastore/conf/: hive-site.xml
infrastructure/hive-metastore/jars/: README.md
infrastructure/init/: 01_create_schemas.sql  02_stub_source_tables.sql  03_create_target_tables.sql
infrastructure/trino/catalog/: lakehouse.properties  lz_lakehouse.properties  oracle_homeloans.properties
inputs/: Oracle_test_subset.sql  README_TEMPLATE_Oracle_psql.docx  proc.sql
sandbox_scripts/conversion/: assemble_proc.py  validate_conversion.py
sandbox_scripts/extraction/: build_graph.py  compute_chunks.py  extract_structure.py  parse_and_scan.py  parse_readme.py
sandbox_scripts/validation/: run_validation.py
src/sql_migration/: __init__.py  main.py
src/sql_migration/core/: artifact_store.py  config_loader.py  context_fixes.py  db_models.py  db_store.py  dependency_gate.py  error_handling.py  global_error_aggregator.py  human_feedback.py  llm_client.py  logger.py  mcp_client.py  preflight.py  sandbox.py  (+4 more)
tests/: test_integration.py
ui/: app.py  helpers.py
ui/pages/: pipeline_monitor.py  submit_job.py
ui/static/: theme.css
ui/views/: artifacts.py  dependency.py  frozen_feedback.py  pipeline_monitor.py  submit_job.py
(+54 files in other folders)
