[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-migration"
version = "0.1.0"
description = "Multi-agent system for migrating Oracle/DB2/Teradata SQL to PySpark/Trino"
requires-python = ">=3.10"

dependencies = [
    # LLM
    "litellm>=1.40.0",

    # Config / env
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Data processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",

    # Document parsing (README)
    "python-docx>=1.1.0",

    # HTTP / async
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.2.0",

    # MCP client
    "fastmcp>=2.0.0",

    # Podman / container interaction
    "podman>=5.0.0",

    # Logging
    "structlog>=24.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Token counting (for history compaction)
    "tiktoken>=0.7.0",

    # Database ORM
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sql-migrate = "sql_migration.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]